hopefully fixed mobile styling issue where there was white space on the right side.  Removed bootstrap row class

--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -8,6 +8,7 @@
 
 }
 #join_the_club{
+    width: 100%;
     background-color: var(--header_color);
     margin-top: 17px;
 }
